# ert-avionics

./: .gitignore  CMakeLists.txt  partitions.csv  sdkconfig
main/: Avionics-v2.cpp  CMakeLists.txt
main/commands/: Command.h  CommandEmatch.cpp  CommandEmatch.h  CommandPing.cpp  CommandPing.h  CommandRegistry.cpp  CommandRegistry.h  CommandRs.cpp  CommandRs.h  CommandState.cpp  CommandState.h  CommandTasks.cpp  CommandTasks.h  UartProcess.cpp  UartProcess.h
main/coms/: Communication.cpp  Communication.h  PacketAssembler.cpp  PacketAssembler.h  PacketConstant.h  PacketToJson.cpp  PacketToJson.h
main/config/: AddressConfig.h  PinConfiguration.h  UartConfig.h
main/sensors/: BMP280.cpp  BMP280.h  MPU6050.cpp  MPU6050.h
main/state/: FlightState.cpp  FlightState.h
main/store/: NVSStore.cpp  NVSStore.h  RedundantStorageManager.cpp  RedundantStorageManager.h  SDCardStorage.cpp  SDCardStorage.h  SpiffsStorage.cpp  SpiffsStorage.h  Storage.h
main/tasks/: ApogeeTask.cpp  ApogeeTask.h  DetectApogeeTask.cpp  DetectApogeeTask.h  DetectTakeoffTask.cpp  DetectTakeoffTask.h  ForwardUartTask.cpp  ForwardUartTask.h  HeartbeatTask.cpp  HeartbeatTask.h  Task.h  TaskRegistry.cpp  TaskRegistry.h  TelemetryTask.cpp  TelemetryTask.h  TestTask.cpp  TestTask.h  UnreefedTask.cpp  UnreefedTask.h
main/utils/: Tools.cpp  Tools.h
server/: go.mod  go.sum  main.go
web/: package-lock.json  package.json
web/src/: App.css  App.jsx  index.css
web/src/components/: CenteredLineChart.tsx  heartbeat.tsx  state-button.tsx
